* **BREAKING CHANGE** Modified default output filename to be dcimgui.h instead of cimgui.h to avoid ambiguity (#80)
* Removed unnecessary typedefs from structs with forward declarations to avoid warnings on C99 compilers (#82)
* Fixed backend generation command-line to include imgui.h so that template expansions work (#83)

--- v0.10

* Added support for converting imgui_internal.h - many thanks to [@ZimM-LostPolygon] for doing the heavy lifting on this!

--- v0.08

* Rewrite the IM_ALLOC/IM_FREE macros to call the C versions of the respective functions, and rename them to
  CIM_ALLOC and CIM_FREE to avoid conflicting with the original defines in #imgui.h (#69)
* Remove IM_NEW/IM_PLACEMENT_NEW defines as they don't make sense outside of C++
* Fixed IMGUI_CHECKVERSION to use the correct function, and renamed to CIMGUI_CHECKVERSION (#69)
* Fixed parsing of type declarations with inline struct/class/etc tags (#71)
* Added support for default value declarations on structure fields. These are currently only emitted as comments
  in the C backend (as there is no immediately usable way to actually apply them), but they are in the metadata so
  other bindings can make use of them if necessary.

--- v0.07

* Fixed a bug where unbounded arrays would get emitted to the metadata as having bounds of "[None]" instead of "[]". (#41)
* Fixed structs not having associated line numbers in the JSON output (#39)
* Added --imgui-include-dir option to allow the path to ImGui include files to be specified
* Made imconfig.h get parsed by default to check for extra options, and added --config-include to allow custom config
  files (of the type you would use the IMGUI_USER_CONFIG define to supply) to be included as well. This option reads
  and uses such files but does not emit their contents to the .h file (on the assumption that they are getting included
  there by regular means). It does however emit that information to the JSON output.