@@ -7,6 +7,8 @@
 * **BREAKING CHANGE** Modified default output filename to be dcimgui.h instead of cimgui.h to avoid ambiguity (#80)
 * Removed unnecessary typedefs from structs with forward declarations to avoid warnings on C99 compilers (#82)
 * Fixed backend generation command-line to include imgui.h so that template expansions work (#83)
+* Fixed (somewhat) template expansion in the case where the instantiation is unique to a file that is not where the
+  template was originally declared (notably the Vulkan backend) (#83)
 
 --- v0.10
 
